--- a/app/views/edit-product.html
+++ b/app/views/edit-product.html
@@ -4,26 +4,27 @@
 <div class="row mt">
   <div class="col-lg-10">
     <div class="form-panel">
-      <form class="form-horizontal style-form" method="get">
+      <h4 class="mb"><i class="fa fa-angle-right"></i> A continuación deberá llenar la información concerniente al producto que desea agregar</h4>
+      <form class="form-horizontal style-form" ng-submit="updateProduct(product)" >
         <!--Name-->
         <div class="form-group">
           <label class="col-sm-2 col-sm-2 control-label">Nombre</label>
           <div class="col-sm-6">
-            <input type="text" class="form-control" name="name" required/>
+            <input type="text" ng-model="product.name" class="form-control" name="name" required/>
           </div>
         </div>
         <!--Description-->
         <div class="form-group">
           <label class="col-sm-2 col-sm-2 control-label">Descripción</label>
           <div class="col-sm-6">
-            <textarea type="text" class="form-control" name="description"></textarea>
+            <textarea type="text" ng-model="product.description" class="form-control" name="description"></textarea>
           </div>
         </div>
         <!--Price-->
         <div class="form-group">
           <label class="col-sm-2 col-sm-2 control-label">Precio</label>
           <div class="col-sm-6">
-            <input type="number" class="form-control" name="price" required/>
+            <input type="number" ng-model="product.price" class="form-control" name="price" required/>
             <span class="help-block">No ingrese el signo pesos $, ni puntos ni comas. Ejm: 20000</span>
           </div>
         </div>
@@ -31,9 +32,10 @@
         <div class="form-group">
           <label class="col-sm-2 col-sm-2 control-label">Imagen</label>
           <div class="col-sm-6">
-            <input type="file" accept="image/*" class="form-control" name="description">
+            <input type="file" file-model="product.image"/>
           </div>
         </div>
+        <p class="text-warning">Categoria seleccionada {{product.category_name}}</p>
         <!--Category-->
         <div class="form-group">
           <label class="col-sm-2 col-sm-2 control-label">Categoría</label>
@@ -47,18 +49,19 @@
 
                 <div class="modal-body">
                   <p>seleccione a continuación la categoria que este más a corde al producto</p>
+                  <p ng-show="selectedCategory">Categoria seleccionada:</p>
+                  <p>{{selectedCategory.name}}<p/>
                   <br>
                   <div ng-controller="CategoryAccordionCtrl">
                     <accordion close-others="oneAtATime">
-
-                      <accordion-group heading="Static Header, initially expanded" is-open="status.isFirstOpen" is-disabled="status.isFirstDisabled">
-                        This content is straight in the template.
-                      </accordion-group>
-
-                      <accordion-group heading="{{group.title}}" ng-repeat="group in groups">
-                        {{group.content}}
-                      </accordion-group>
-
+                      <div ng-repeat="category in categories">
+                        <accordion-group heading="{{category.name}}" >
+                          <div ng-repeat = "child in category.children" >
+                            <button type="button" ng-click="setSelectedCategory({{child}})" class="btn btn-primary btn-lg btn-block">{{child.name}}</button>
+                            <br>
+                          </div>
+                        </accordion-group>
+                      </div>
                     </accordion>
                   </div>
                 </div>
@@ -69,68 +72,67 @@
                 </div>
               </script>
 
-              <a href="" style="text-decoration:underline" ng-click="categoryModal()">Agregar categoria</a>
-              <div ng-show="selected">Selection from a modal: {{ selected }}</div>
+              <a href=""  ng-click="categoryModal()" class="btn btn-success">Agregar categoria</a>
+
             </div><!--End Modal-->
+            <div ng-show="category">Nueva Categoria Seleccionada: {{ category.name }}</div>
 
           </div>
+        </div>
+        <h4>Producto disponible en:</h4>
+        <div ng-repeat="shop in product.shops">
+            {{shop.name}}  <a class="btn btn-danger" ng-click="deleteLocation({{shop.id}})" >Eliminar</a>
+        </div>
+        <!--Shops-->
+        <p class="text-danger">Seleccione las tiendas para agregar (el sistema no admite repetidas)</p>
+        <div class="form-group">
+          <label class="col-sm-2 col-sm-2 control-label">Disponibilidad en tiendas</label>
+          <div class="col-sm-10" translation-texts="translations" ng-dropdown-multiselect="" options="selectData" selected-model="shops"></div>
         </div>
         <!--Discount-->
         <div class="form-group">
           <label class="col-sm-2 col-sm-2 control-label">Descuento</label>
           <div class="col-sm-6">
-            <input type="number" class="form-control" name="discount" required/>
+            <input type="number" ng-model="product.discount" class="form-control" name="discount" required/>
             <span class="help-block">No ingrese el signo de porcentaje %. Ejm: 25</span>
           </div>
         </div>
+        <p class="text-danger" >Fecha de vencimiento actual: {{product.expiration_date}}</p>
         <!--Expiration Date-->
         <div class="form-group">
           <label class="col-sm-2 col-sm-2 control-label">Fecha de expiración</label>
           <div class="col-sm-10">
             <div ng-controller="ExpirationDateCtrl">
-              <h5><b>{{dt | date:'fullDate'| uppercase }}</b></h5>
-
+              <h5><b>Nueva fecha: {{dt | date:'fullDate'| uppercase }}</b></h5>
               <br>
-
               <div style="display:inline-block; min-height:290px;">
                 <datepicker ng-model="dt" min-date="minDate" show-weeks="true" class="well well-sm"></datepicker>
               </div>
             </div><!--End div ExpirationDateCtrl-->
           </div>
         </div>
-        <!--Shops-->
-        <div class="form-group">
-          <label class="col-sm-2 col-sm-2 control-label">Tiendas</label>
-          <div class="col-xs-5">
-            <select class="form-control" name="browsers" multiple>
-              <option value="chrome">Google Chrome</option>
-              <option value="firefox">Firefox</option>
-              <option value="ie">IE</option>
-              <option value="safari">Safari</option>
-              <option value="opera">Opera</option>
-              <option value="other">Other</option>
-            </select>
-          </div>
-        </div>
-
         <!--Cancel and ok buttons-->
+
         <div class="row">
           <div class="col-lg-4">
           </div>
+          <span us-spinner ng-show="dataLoading"></span>
           <div class="col-lg-2">
-            <!--If ui-sref is putted instead of ng-href, it wont ask to put the requiered textfields-->
-            <button class="btn btn-default btn-block" ui-sref="list-of-products" type="submit" name="cancel"> Cancelar</button>
-          </div>
-          <div class="col-lg-2">
-            <button class="btn btn-theme btn-block" ng-href="login" type="submit" name="accept"> Aceptar</button>
+            <button class="btn btn-theme btn-block"  ng-show="!dataLoading" name="accept" type="submit" > Aceptar</button>
           </div>
           <div class="col-lg-4">
           </div>
         </div>
-      </form>
-
-      <!--Cancel & Ok buttons-->
-
     </div>
-  </div><!-- col-lg-12-->
+
+
+    </form>
+    <br><br><br>
+
+    <!--Cancel & Ok buttons-->
+
+  </div>
+</div><!-- col-lg-12-->
 </div><!-- /row -->
+
+
